# MiniRedis

./: .gitignore  CMakeLists.txt  client.c  server.c
include/: network.h  nonblock.h
src/Client/: CMakeLists.txt
src/Client/include/: clientnet.h  query.h
src/Client/src/: clientnet.c  main.c  query.c
src/JavaClient/: Main.java  MiniRedisClient.java  QuitException.java
src/Server/: CMakeLists.txt
src/Server/include/: hashmap.h  hashtable.h  nonblock.h  request.h  servernet.h  util.h
src/Server/src/: hashmap.c  hashtable.c  main.c  nonblock.c  request.c  servernet.c  util.c
src/general/: network.c  nonblock.c
